# x-tunnel

./: README.md  config.example.yaml  start.sh  x-tunnel-client.go
x-tunnel-android-gui-src/: xtunnel.go
x-tunnel-android-gui-src/src/main/java/com/x/tunnel/: AppListActivity.java  MainActivity.java  Preferences.java  ServiceReceiver.java  TProxyService.java
x-tunnel-android-gui-src/src/main/res/layout/: main.xml
x-tunnel-android-gui-src/src/main/res/values/: strings.xml
x-tunnel-rust/: Cargo.toml  README.md
x-tunnel-rust/src/: main.rs
x-tunnel-windows-gui-src/: main.c
