[package]
name = "x-tunnel-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4"] }
rustls = "0.21"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
clap = { version = "4.0", features = ["derive"] }
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.0"
futures-util = "0.3"
tokio-rustls = "0.24"
webpki-roots = "0.25"
http = "0.2"