[package]
name = "x-tunnel-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
rustls = "0.21"
webpki-roots = "0.25"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
url = "2.4"
reqwest = { version = "0.11", features = ["rustls-tls"] }
hickory-resolver = "0.24"
log = "0.4"
env_logger = "0.10"
bytes = "1.4"
tokio-util = "0.7"
lazy_static = "1.4"